# scene-in-door

./: .gitignore  CMakeLists.txt  objects.json
include/glad/: glad.h
objects/: gunung_padang.mtl
src/: README.md  glad.c  main.cpp
src/Core/: Camera.cpp  Camera.h
src/Graphics/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.h  Skybox.cpp  Skybox.h  UIManager.cpp  UIManager.h
src/Scene/: Scene.cpp  Scene.h
